--- a/Practice/practice_Bstation.html
+++ b/Practice/practice_Bstation.html
@@ -2,11 +2,75 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="description" content="顾乾亮的web前端开发起步试做01">
+        <meta name="keywords" content="Bilibili,叽哩叽哩,叽哩叽哩动画,叽哩叽哩弹幕网,弹幕视频,B站,弹幕,字幕,AMV,MAD,MTV,ANIME,动漫,动漫音乐,游戏,游戏解说,二次元,游戏视频,ACG,galgame,动画,番组,新番,初音,洛天依,vocaloid,日本动漫,国产动漫,手机游戏,网络游戏,电子竞技,ACG燃曲,ACG神曲,追新番,新番动漫,新番吐槽,巡音,镜音双子,千本樱,初音MIKU,舞蹈MMD,MIKUMIKUDANCE,洛天依原创曲,洛天依翻唱曲,洛天依投食歌,洛天依MMD,vocaloid家族,OST,BGM,动漫歌曲,日本动漫音乐,宫崎骏动漫音乐,动漫音乐推荐,燃系mad,治愈系mad,MAD MOVIE,MAD高燃">
         <title>叽哩叽哩弹幕视频网 - ( ゜- ゜)つロ 乾杯~ - giligili</title>
         <link rel="stylesheet" href="./Bstation.CSS">
         <link rel="icon" href="./img/giligili.ico">
+        <style>
+            body {
+                flex-direction: column;
+                height: 100vh;
+            }
+
+            .header {
+                display: flex;
+                position: relative;
+                background-color: pink;
+                height: 15vh;
+                box-sizing: border-box;
+            }
+
+            .main {
+                flex: 1;
+            }
+
+            .footer {
+                background-color: gray;
+                height: 15vh;
+            }
+
+            .header > div {
+                position: absolute;
+                left: 0;
+                right: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 100%;
+            }
+
+            .headerbg {
+                width: 100%;
+                height: inherit;
+            }
+
+
+        </style>
     </head>
-    <body style="zoom: 1;">
-        
+    <body style="display:flex; zoom: 1;">
+        <div class="header">
+            <div>
+                <img class="headerbg" src="./img/jili1.png" alt="">
+            </div>
+            <div>
+                <img class="headerbg" src="./img/jili2.png" alt="">
+            </div>
+            <div>
+                <img class="headerbg" src="./img/jili3.png" alt="">
+            </div>
+            <div>
+                <img class="headerbg" src="./img/jili4.png" alt="">
+            </div>
+            <div>
+                <img class="headerbg" src="./img/jili5.png" alt="">
+            </div>
+            <div>
+                <img class="headerbg" src="./img/jili6.png" alt="">
+            </div>
+        </div>
+        <div class="main"></div>
+        <div class="footer"></div>
     </body>
 </html>
