--- a/Practice/practice_Bstation.html
+++ b/Practice/practice_Bstation.html
@@ -142,7 +142,7 @@
             /*内容栏*/
             .main {
                 align-self: center;
-                width: 70vh;
+                width: 70%;
                 border: 1px solid black;
             }
 
@@ -279,7 +279,7 @@
                 </ul>
             </div>
 
-            <div class="logo" style="content: url(./img/logo.png); position:absolute;bottom: 1vw; align-self: flex-start;"></div>
+            <div class="logo" style="content: url(./img/logo.png); position:absolute;bottom: -1vw; align-self: flex-start;"></div>
         </div>
 
         <div class="main">
