--- a/Practice/practice_Bstation.html
+++ b/Practice/practice_Bstation.html
@@ -283,14 +283,10 @@
                 display: grid;
                 width: 100%;
                 height: 25vh; 
-                background-color: cornflowerblue;
                 grid-template-rows: repeat(2,1fr);
                 grid-template-columns: repeat(5,1fr);
                 gap: 0.5vw 0.5vw;
-            }
-
-            .recommend > div {
-                border: 1px solid black;
+                box-sizing: border-box;
             }
 
             /*推荐栏-主位-轮播*/
@@ -400,13 +396,48 @@
             /*推荐栏-展示区*/
             .show {
                 display: flex;
-                background-color:red;
-                
             }
 
             .show > img {
                 width: 14vw;
-                height: 12.5vh;
+                height: 12vh;
+            }
+            /*推广区*/
+
+            .spread {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                height: 22vh;
+                border: 1px solid black;
+                margin: 1vh 0;
+            }
+
+            .spread > div {
+                
+                border: 1px solid black;
+            }
+
+            .spreadHeader {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex: 1;
+            }
+
+            .spreadHeader * {
+                display: inline-flex;
+                align-items: center;
+            }
+
+            #fire::after {
+                content: attr(alt);
+                display: block;
+                background-color: blue;
+                z-index: 1;
+            }
+            .spreadFooter {
+                flex: 7;
             }
         </style>
     </head>
@@ -594,6 +625,34 @@
                 <div class="show"><img src="./img/show6.jpg" alt=""></div>
             </div>
 
+            <div class="spread">
+                <div class="spreadHeader">
+                    <div>
+                        <img src="./img/horn.jpg" alt="" style="height: 40px;">
+                        <span style="font-size: 20px; margin-right: 20px;">推广</span>
+                        <img id="fire" src="./img/fire.jpg" alt="这些名场面你有印象吗?" style="width: 16px;">
+                    </div>
+                    <input type="button" value="在线列表">
+                </div>
+
+                <div class="spreadFooter">
+                    <div>
+                        <p></p>
+                    </div>
+                    <div>
+                        <p></p>
+                    </div>
+                    <div>
+                        <p></p>
+                    </div>
+                    <div>
+                        <p></p>
+                    </div>
+                    <div>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
 
         </div>
         <div class="footer"></div>
