--- a/Practice/practice_Bstation.html
+++ b/Practice/practice_Bstation.html
@@ -468,6 +468,12 @@
                 width: 100%;
                 height: 116px;
             }
+            
+            .spreadFooter span:hover {
+                color: #73c9e5;
+                cursor: pointer;
+                transition: .3s;
+            }
 
             .ad {
                 display: inline-block;
