--- a/Practice/alignment.html
+++ b/Practice/alignment.html
@@ -88,9 +88,55 @@
                 background-color: hotpink;
                 list-style: none;
                 padding: 0;
-                vertical-align: middle;
+                -vertical-align: middle;
                     
             }
+
+            .vertical-align2 > img {
+                vertical-align:super;
+                line-height: 1ex;
+            }
+            /*vertical-align-baseline-principle*/
+
+            .box {
+                display: flex;
+                flex-wrap: wrap;
+                width: 1000px;
+                height: 1000px;
+                border: 1px solid black;
+                background-color: hotpink;
+                list-style: none;
+                padding: 0;
+                line-height: 300px;
+                    
+            }
+            .verticalAttr {
+                width: 300px;
+                height: 300px;
+                background-color: cornflowerblue;
+                margin: 10px;
+            }
+
+            .verticalAttr div {
+                width: 100px; height: 100px;
+                background: center / contain no-repeat url(./img/ft12.jpg);
+                color: red;
+                font-weight: bold;
+                box-sizing: border-box;
+            }
+            .verticalAttr img {
+                width: 50px; height: 50px;
+            }
+
+            .sub {display:inline-block;vertical-align: sub;}
+            .super {display:inline-block;vertical-align: super;}
+            .top {display:inline-block;vertical-align: top;}
+            .text-top {display:inline-block;vertical-align: text-top;}
+            .bottom {display:inline-block;vertical-align: bottom;}
+            .text-bottom {display:inline-block;vertical-align: text-bottom;}
+            .middle {display:inline-block;vertical-align: middle;}
+            .lenth {display:inline-block;vertical-align: -30px;}
+            .percentage {display:inline-block;vertical-align: .5%;}
 
     </style>
 </head>
@@ -122,5 +168,46 @@
         vertical-align2
         <img src="./img/fire.jpg" alt="">
     </div>
+
+    <div class="box">
+        <div class="verticalAttr">
+            <span>我是用来测试的X</span>
+            <div class="sub">sub</div>
+        </div>    
+        <div class="verticalAttr">
+            <span>我是用来测试的X</span>
+            <div class="super">super</div>
+        </div>    
+        <div class="verticalAttr">
+            <span>我是用来测试的X</span>
+            <div class="top">top</div>
+        </div>    
+        <div class="verticalAttr">
+            <span>我是用来测试的X</span>
+            <div class="text-top">text-top</div>
+        </div>    
+        <div class="verticalAttr">
+            <span>我是用来测试的X</span>
+            <div class="middle">middle</div>
+        </div>    
+        <div class="verticalAttr">
+            <span>我是用来测试的X</span>
+            <div class="bottom">bottom</div>
+        </div>    
+        <div class="verticalAttr">
+            <span>我是用来测试的X</span>
+            <div class="text-bottom">text-bottom</div>
+        </div>    
+        <div class="verticalAttr">
+            <span>我是用来测试的X</span>
+            <div class="lenth">lenth-30px</div>
+        </div>    
+        <div class="verticalAttr">
+            <span>我是用来测试的X</span>
+            <div class="percentage">.5%</div>
+        </div>   
+    </div>
+ 
+  
 </body>
 </html>
