--- a/Practice/alignment.html
+++ b/Practice/alignment.html
@@ -138,6 +138,21 @@
             .lenth {display:inline-block;vertical-align: -30px;}
             .percentage {display:inline-block;vertical-align: .5%;}
 
+            /*line-height 1ex的用法*/
+
+            #exUse {
+                width: 500px;
+                height: 500px;
+                border: 1px solid black;
+                background-color: hotpink;
+             }   
+            .icon-arrow {
+                display: inline-block;
+                width: 50px;
+                height: 1ex;
+                background: url(./img/ftp3.png) no-repeat center;
+                background-size: contain;
+            }           
     </style>
 </head>
 <body style="margin: 0;">
@@ -208,6 +223,9 @@
         </div>   
     </div>
  
-  
+    <div id="exUse">
+        <span>我是一段文本</span>
+        <i class="icon-arrow"></i>
+    </div>    
 </body>
 </html>
