--- a/Practice/practice_Bstation.html
+++ b/Practice/practice_Bstation.html
@@ -816,7 +816,7 @@
 
             /*侧边栏*/
             .sidebar {
-                position: absolute;
+                position: fixed;
                 left: 86%;
                 z-index: 10;
                 width: 4em;
